[gd_scene load_steps=5 format=3 uid="uid://ix2g6f8f0bne"]

[ext_resource type="Script" path="res://main_menu_page/workout_page/setting/exercise_box.gd" id="1_1a0tk"]
[ext_resource type="PackedScene" uid="uid://dlm00wymo6axj" path="res://widgets/talent_selection.tscn" id="2_bx6iu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6l4ya"]
bg_color = Color(0.85098, 0.85098, 0.85098, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4tnm1"]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="exercise_box" type="Control"]
custom_minimum_size = Vector2(680, 200)
layout_mode = 3
anchors_preset = 0
offset_right = 680.0
offset_bottom = 200.0
script = ExtResource("1_1a0tk")

[node name="exercise_box" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(680, 200)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_right = 340.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6l4ya")

[node name="HBoxContainer" type="HBoxContainer" parent="exercise_box"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="exercise_box/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40

[node name="TalentSelection" parent="exercise_box/HBoxContainer/MarginContainer" instance=ExtResource("2_bx6iu")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="exercise_box/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="exercise_box/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="setSetupContainer" type="HBoxContainer" parent="exercise_box/HBoxContainer/MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="SetSelection" type="Button" parent="exercise_box/HBoxContainer/MarginContainer2/VBoxContainer/setSetupContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_4tnm1")
text = "10 Sets"

[node name="RepSelection" type="Button" parent="exercise_box/HBoxContainer/MarginContainer2/VBoxContainer/setSetupContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_4tnm1")
text = "10 Reps"

[node name="BreakTimeSelection" type="Button" parent="exercise_box/HBoxContainer/MarginContainer2/VBoxContainer/setSetupContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_4tnm1")
text = "180 sec"
